remove pref ui for disbling plugins as it has some major problems (specifically with js). bug 210724. sr=pinkerton