camino/PreferencePanes/WebFeatures/WebFeatures.h
@@ -11,7 +11,6 @@ class nsISupportsArray;
 {
   IBOutlet NSButton* mEnableJS;
   IBOutlet NSButton* mEnableJava;
-  IBOutlet NSButton* mEnablePlugins;
 
   IBOutlet NSButton *mEnablePopupBlocking;
   IBOutlet NSButton *mImageResize;
@@ -28,7 +27,6 @@ class nsISupportsArray;
 
 -(IBAction) clickEnableJS:(id)sender;
 -(IBAction) clickEnableJava:(id)sender;
--(IBAction) clickEnablePlugins:(id)sender;
 
 -(IBAction) clickEnablePopupBlocking:(id)sender;
 -(IBAction) clickEnableImageResizing:(id)sender;
